syntax = "proto3";

package main;

option go_package = "./proto";

// 添加退货原因表
message AddOrderReturnReasonReq {
  int64 id = 1; //
  string name = 2; //退货类型
  int32 sort = 3; //排序
  int32 status = 4; //状态：0->不启用；1->启用
}

message AddOrderReturnReasonResp {
  string pong = 1;
}

// 删除退货原因表
message DeleteOrderReturnReasonReq {
  repeated int64 ids = 1;
}

message DeleteOrderReturnReasonResp {
  string pong = 1;
}

// 更新退货原因表
message UpdateOrderReturnReasonReq {
  int64 id = 1; //
  string name = 2; //退货类型
  int32 sort = 3; //排序
  int32 status = 4; //状态：0->不启用；1->启用

}

message UpdateOrderReturnReasonResp {
  string pong = 1;
}

// 更新退货原因表状态
message UpdateOrderReturnReasonStatusReq {
  repeated int64 ids = 1;
  int32 status = 2; //状态：0->不启用；1->启用

}

message UpdateOrderReturnReasonStatusResp {
  string pong = 1;
}

// 查询退货原因表详情
message QueryOrderReturnReasonDetailReq {
    int64 id = 1;
}

message QueryOrderReturnReasonDetailResp {
  int64 id = 1; //
  string name = 2; //退货类型
  int32 sort = 3; //排序
  int32 status = 4; //状态：0->不启用；1->启用
  string create_time = 5; //创建时间


}

// 分页查询退货原因表列表
message QueryOrderReturnReasonListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string name = 3; //退货类型
  int32 status = 4; //状态：0->不启用；1->启用

}

message OrderReturnReasonListData {
  int64 id = 1; //
  string name = 2; //退货类型
  int32 sort = 3; //排序
  int32 status = 4; //状态：0->不启用；1->启用
  string create_time = 5; //创建时间

}

message QueryOrderReturnReasonListResp {
  int64 total = 1;
  repeated  OrderReturnReasonListData list = 2;
}

// 退货原因表
service OrderReturnReasonService {
  // 添加退货原因表
  rpc AddOrderReturnReason(AddOrderReturnReasonReq) returns (AddOrderReturnReasonResp){}
  // 删除退货原因表
  rpc DeleteOrderReturnReason(DeleteOrderReturnReasonReq) returns (DeleteOrderReturnReasonResp){}
  // 更新退货原因表
  rpc UpdateOrderReturnReason(UpdateOrderReturnReasonReq) returns (UpdateOrderReturnReasonResp ){}
  // 更新退货原因表状态
  rpc UpdateOrderReturnReasonStatus(UpdateOrderReturnReasonStatusReq) returns (UpdateOrderReturnReasonStatusResp ){}
  // 查询退货原因表详情
   rpc QueryOrderReturnReasonDetail(QueryOrderReturnReasonDetailReq) returns (QueryOrderReturnReasonDetailResp){}
  // 查询退货原因表列表
  rpc QueryOrderReturnReasonList(QueryOrderReturnReasonListReq) returns (QueryOrderReturnReasonListResp){}


}
